remove failed3xs class

--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -152,11 +152,11 @@
           <div class="card class_card" id="3-times">
             <img class="card-img-top classes_images" src="/images/driver-manual-icon.png" alt="Card image cap">
             <div class="card-body">
-              <h3>Failed DMV Test 3 Times Class/Permit Class (On-Line)</h3>
+              <!-- <h3>Failed DMV Test 3 Times Class/Permit Class (On-Line)</h3>
               <p>If you have unfortunately failed a test at the Virginia DMV three times while trying to acquire a
                 Learners Permit or reinstate your Driver License, this is the class that is required.
-              </p>
-              <p>The Driver Manual Course / 3 Failures Class needs to be 8 hours of instruction to satisfy the DMV’s
+              </p> -->
+              <!-- <p>The Driver Manual Course / 3 Failures Class needs to be 8 hours of instruction to satisfy the DMV’s
                 requirements and is basically a highly concentrated study period. In this class we try to cover
                 everything
                 that could possibly be asked on the test, as well as preparing you to be as familiar as possible with
@@ -167,7 +167,7 @@
                 completed at one time, you can complete as much or as little of the class in a day as you like. Once you
                 have completed the 8 Hour Driver Manual/3 Failures Permit Class, you will have an unlimited number of
                 chances to pass the test at the DMV.
-              </p>
+              </p> -->
               <h3 style="padding-top:40px;">
                 How to Register for the Class
               </h3>
