--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="row">
           <div class="col">
             <h3 id="choose_class">
@@ -71,7 +71,7 @@
             </h3>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- <div class="container">
         <div class="row" id="first_row">
@@ -111,7 +111,7 @@
         </div>
       </div> -->
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="row" id="fourth_row">
           <div class="col class_cards">
             <a href="/classes/#3-times" class="card index_page_card">
@@ -121,7 +121,7 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- <div class="container">
         <div class="row" id="fifth_row">
