remove section on classes page

--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -149,9 +149,9 @@
             </div>
           </div>
 
-          <div class="card class_card" id="3-times">
+          <!-- <div class="card class_card" id="3-times">
             <img class="card-img-top classes_images" src="/images/driver-manual-icon.png" alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body"> -->
               <!-- <h3>Failed DMV Test 3 Times Class/Permit Class (On-Line)</h3>
               <p>If you have unfortunately failed a test at the Virginia DMV three times while trying to acquire a
                 Learners Permit or reinstate your Driver License, this is the class that is required.
@@ -168,7 +168,7 @@
                 have completed the 8 Hour Driver Manual/3 Failures Permit Class, you will have an unlimited number of
                 chances to pass the test at the DMV.
               </p> -->
-              <h3 style="padding-top:40px;">
+              <!-- <h3 style="padding-top:40px;">
                 How to Register for the Class
               </h3>
 
@@ -222,7 +222,7 @@
               </div>
 
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="card class_card" id="reckless">
             <img class="card-img-top classes_images"
